--- a/style.css
+++ b/style.css
@@ -161,9 +161,9 @@ body{
 	}
 }
 
-@media (max-width: 800px) {
-	body{
-		background-color: #fff;
-		
+
+@media screen and (max-width: 536px){
+	.container{
+		background-color: grey;
 	}
 }
