--- a/style.css
+++ b/style.css
@@ -23,9 +23,9 @@ body{
 }
 
 .item1{
-	background: url(./Images/Group2.svg);
+	background: url(./Images/Group.svg);
 	background-repeat: no-repeat;
-	background-size: 100%;
+	background-size: cover;
 	height: 1567px;
 	width: 73px;
 	margin-left: 1210px;
@@ -114,8 +114,8 @@ body{
 	height: 213px;
 	width: 40px;
 	position: relative;
-	top: 25px;
-	left: 0;
+	top: 90px;
+	right: 5px;
 	background-size: 60%;
 }
 
@@ -125,9 +125,9 @@ body{
 	height: 1000px;
 	width: 59px;
 	position: relative;
-	top: -1px;
-	left: 0;
-	background-size: 90%;
+	top: 75px;
+	right: 8px;
+	background-size: cover;
 }
 
 @media print{
